# layout-fixer

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  index.html  package-lock.json  package.json  tsconfig.node.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/layouts/: en-us__uk-ua.json
src-tauri/src/: clipboard_history.rs  hotkey_validator.rs  layouts.rs  lib.rs  main.rs  settings.rs
src/lib/: convertLayout.ts  detectDirection.ts  i18n.ts  layouts.ts
src/test/: convertLayout.test.ts
